correction responsive version mobile

--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,7 @@
 body {
+  margin: 0;
+  padding: 0;
   max-width: 1400px;
-  margin: auto;
-  position: relative;
-}
-
-html, body {
-  overflow-x: hidden;
 }
 
 h1 {
@@ -64,7 +60,6 @@ header {
   justify-content: space-between;
   align-items: center;
   font-size: 16px;
-  padding: 0 25px 0 25px;
 }
 
 .logo {
@@ -100,14 +95,6 @@ nav {
 
 /*********** search-bar ***********/
 
-
-main {
-  padding: 0 25px 0 25px;
-}
-
-.search p {
- margin-top : -15px
-}
 
 .formula {
   display: flex;
@@ -429,10 +416,8 @@ footer {
   align-items: baseline;
   justify-content: space-around;
   margin-top: 50px;
-  padding: 35px;
   background: #F2F2F2;
-  margin-left: 25px;
-  margin-right: 25px;
+
 }
 
 footer a {
@@ -464,14 +449,14 @@ footer a {
 
 /*********** tablette ***********/
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 991px) and (min-width: 767px) {
   header {
-    margin : 0px 50px 0px 50px;
+    margin : 0px 50px;
     padding : 0px;
   }
 
   main {
-    margin : 0px 50px 0px 50px;
+    margin : 0px 50px;
     padding : 0px;
   }
 
@@ -528,8 +513,6 @@ footer a {
 
   header {
     flex-direction: column;
-    padding: 0px;
-    margin: 0px 0px 0px 20px;
   }
 
   .logo {
@@ -550,16 +533,8 @@ footer a {
     border-top: 0px;
   }
 
-  .search p {
-    margin: 0px 0px 0px 24px;
-  }
-
-  .search h1 {
-    padding: 10px 50px 0px 25px;
-  }
-
-  .formula {
-    margin-left: 5%;
+  .search {
+    padding: 0px 20px;
   }
 
   .search-French {
@@ -582,17 +557,14 @@ footer a {
   .big-box-filtre {
     flex-wrap: wrap;
     flex-direction: column;
-  }
-
-  .titre-filtre {
-    margin-left: 23px;
+    padding: 0px 20px;
+    margin-bottom: 20px;
   }
 
   .box-filtre {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    margin-left: 10px;
   }
 
   .filtre-btn {
@@ -602,18 +574,17 @@ footer a {
   }
 
   .box-info {
-    margin-left: 20px;
+    padding: 0px 20px;
   }
 
   .box-hebergement-populaire {
     display: flex;
     flex-direction: column-reverse;
-    width: 90%;
   }
 
   .box-populaire{
-    width: 100%;
     border-radius: 0px;
+    width: 100%;
   }
 
   .big-box-2 {
@@ -623,15 +594,14 @@ footer a {
   }
 
   .card-populaire {
-    width: 100%;
     height: 135px;
     margin-top: 15px;
     margin-bottom: 0px;
   }
 
   .box-hebergement{
-    width: 100%;
     background-color: #fff;
+    width: 100%;
   }
 
   .big-box {
@@ -657,18 +627,19 @@ footer a {
   }
 
   .box-activite {
-    margin-left: 20px;
+    padding: 0px 20px;
     width: 100%;
   }
 
   .big-box-3 {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
 
   .card-activite {
-    width: 90%;
     height: 180px;
+    width: 100%;
   }
 
   .card-activite h2 {
@@ -679,29 +650,11 @@ footer a {
     height: 130px;
   }
 
-  main {
-    margin: 0px 0px 0px 0px;
-  }
-
   footer {
-    width: 110%;
-    margin: 0px;
     margin-top: 40px;
-    padding: 0px;
-    padding-bottom: 30px;
     display: flex;
     flex-direction: column;
-  }
-
-  .a-propos {
-    margin-left: 35px;
-  }
-
-  .hebergement {
-    margin-left: 35px;
-  }
-
-  .assistance {
-    margin-left: 35px;
+    padding: 30px 20px;
+    width: 100%;
   }
 }
